# s3rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-release  default.nix  example.sh  flake.nix  license  mk-rust-platform.nix  overlay.nix  s3rs.example  s3rs.nix  shell.nix  test_command.sh  test_shell.sh
.github/workflows/: build.yml  dep_check.yml  linter.yml  release.yml
config_examples/: aws-example.toml  ceph-example.toml
nix/: sources.json
src/: aws.rs  config.rs  logger.rs  main.rs  secret.rs
src/command/: mod.rs  secret.rs
src/handler/: aws.rs  mod.rs
