[package]
name = "s3rs"
version = "0.4.1"
authors = ["Antonio Yang <yanganto@gmail.com>"]
description = "A s3 cli client with multi configs with diffent provider"
keywords = ["S3", "Amazon", "CEPH", "AWS"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yanganto/s3rs"
edition = "2018"

[dependencies]
dirs = "2.0"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.49",  features = ["vendored"] }
failure = "0.1.6"
interactor = "0.1"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
reqwest = "0.9"
hyper = "0.11"
http = "0.1"
chrono = "0.4"
rust-crypto = "0.2"
hmac = "0.4"
sha2 = "0.6"
base64 = "0.6"
rustc-serialize = "0.3"
hmac-sha1 = "0.1"
url = "2.1.0"
log = "0.4"
md5 = "0.3"
serde_json = "1.0"
regex = "0.2"
quick-xml = "0.12"
colored = "1.6"
s3handler = "0.5.1"
clap = "2.33.0"
hex = "0.4.2"
blake2-rfc = "0.2.18"
rand = "0.7.3"
