[package]
name = "s3rs"
version = "0.4.28"
authors = ["Antonio Yang <yanganto@gmail.com>"]
description = "A s3 cli client with multi configs with different provider"
keywords = ["S3", "Amazon", "CEPH", "AWS"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yanganto/s3rs"
edition = "2018"

[dependencies]
dirs = "4.0.0"
openssl = { version = "0.10" }
openssl-sys = { version = "0.9" }
interactor = "0.1"
toml = "0.5.9"
serde = "1.0"
serde_derive = "1.0"
hyper = "0.14"
http = "0.2.8"
chrono = "0.4"
hmac = "0.12.1"
sha2 = "0.10.2"
base64 = "0.20.0"
hmac-sha1 = "0.1"
url = "2.1"
log = "0.4"
md5 = "0.7.0"
serde_json = "1.0"
regex = "1.5"
quick-xml = "0.26.0"
colored = "2.0.0"
s3handler = "0.8.1"
clap = { version =  "4.4.18", features = ["derive"]}
hex = "0.4.2"
blake2-rfc = "0.2"
rand = "0.8.5"
humansize = "2.0"
tokio = { version = "1", optional = true }

[features]
default = ["async"]
vendored = [
    "openssl/vendored",
    "openssl-sys/vendored"
]
async = [
    "s3handler/tokio-async",
    "tokio"
]
